project(cups-templates)

install(
	FILES
		add-class.tmpl
		add-printer.tmpl
		admin.tmpl
		choose-device.tmpl
		choose-make.tmpl
		choose-model.tmpl
		choose-serial.tmpl
		choose-uri.tmpl
		class.tmpl
		class-added.tmpl
		class-confirm.tmpl
		class-deleted.tmpl
		class-jobs-header.tmpl
		class-modified.tmpl
		classes.tmpl
		classes-header.tmpl
		command.tmpl
		edit-config.tmpl
		error.tmpl
		error-op.tmpl
		header.tmpl
		help-header.tmpl
		help-trailer.tmpl
		help-printable.tmpl
		job-cancel.tmpl
		job-hold.tmpl
		job-move.tmpl
		job-moved.tmpl
		job-release.tmpl
		job-restart.tmpl
		jobs.tmpl
		jobs-header.tmpl
		list-available-printers.tmpl
		modify-class.tmpl
		modify-printer.tmpl
		norestart.tmpl
		option-boolean.tmpl
		option-conflict.tmpl
		option-header.tmpl
		option-pickmany.tmpl
		option-pickone.tmpl
		option-trailer.tmpl
		pager.tmpl
		printer.tmpl
		printer-accept.tmpl
		printer-added.tmpl
		printer-cancel-jobs.tmpl
		printer-configured.tmpl
		printer-confirm.tmpl
		printer-default.tmpl
		printer-deleted.tmpl
		printer-jobs-header.tmpl
		printer-modified.tmpl
		printer-reject.tmpl
		printer-start.tmpl
		printer-stop.tmpl
		printers.tmpl
		printers-header.tmpl
		restart.tmpl
		samba-export.tmpl
		samba-exported.tmpl
		search.tmpl
		set-printer-options-header.tmpl
		set-printer-options-trailer.tmpl
		test-page.tmpl
		trailer.tmpl
		users.tmpl
	DESTINATION libexec/darling/usr/share/cups/templates
)
